# Resume-Upload-API

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: analytics.py  augmentation.py  auth.py  chat.py  infrastructure.py  jobs.py  ml.py  pipeline.py  privacy.py  resumes.py  simulation.py  warehouse.py
src/app/core/: database.py
src/app/models/: models.py
src/app/schemas/: schemas.py
