[project]
name = "kenexai-backend"
version = "1.1.0"
description = "AI-Powered Resume Screening and Talent Analytics Platform"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic[email]",
    "python-multipart",
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
factory = "app.main:app"
